--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   lottie: ^1.2.2
   shared_preferences: ^2.0.13
   flutter_barcode_scanner: 2.0.0
+  loading_indicator: 3.0.3
   flutter: 
     sdk: flutter
 
